# Q-Investment

./: .gitignore  CHANGES.md  DOLO_SETUP.md  IMPROVEMENTS.md  INSTALLATION.md  README.md  pyproject.toml
.specstory/history/: 2025-11-12-20-19Z-rename-files-and-update-references.md  2025-11-12_20-19Z-rename-files-and-update-references.md
Examples/: Class-Figures.ipynb  Class-Figures.py  Dolo-simulations.ipynb  Dolo-simulations.py  Problem-set-nathanrobino.ipynb  Problem-set-template.ipynb  Problem-set-template.py  Qmod-basic-features.ipynb  Qmod-basic-features.py  Structural-changes-Qmod-Dolo.ipynb  Structural-changes-Qmod-Dolo.py
Figures/: CorporateTaxReduction.txt  ITCIncrease.txt  ProductivityIncrease.txt
Qmod/: __init__.py  q-investment.py
tests/: __init__.py  test_qmod.py
